--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,16 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.9",
         "mashape/unirest-php": "^3.0",
+        "ninsuo/symfony-collection": "^2.1",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
