--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,9 +10,9 @@ menuCategory:
     path: /admin/{cafeteria}/menu/category
     controller: App\Controller\MenuController::category
     
-menuIngredient:
-    path: /admin/{cafeteria}/menu/ingredient
-    controller: App\Controller\MenuController::ingredient
+menuBundle:
+    path: /admin/{cafeteria}/menu/bundle
+    controller: App\Controller\MenuController::bundle
     
 menuProduct:
     path: /admin/{cafeteria}/menu/product
