--- a/.env
+++ b/.env
@@ -15,3 +15,8 @@ APP_SECRET=a5849440edb490edb29119fa9aaef5fb
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> AWS-SDK ###
+AWS_ACCESS_KEY_ID=AKIAJFGRA4OSR2VK7LLA
+AWS_SECRET_ACCESS_KEY=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
+###< AWS-SDK ###
